force-app/main/default/objects/Blockchain__c/Blockchain__c.object-meta.xml
<CustomObject>
    <label>Blockchain</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blockchains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>