force-app/main/default/objects/Blockchain__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>The difficulty determines the amount of work (computing time) required for generating a new block on the blockchain. The higher the difficulty, the longer the computing time to find a hash that meets a specific format, like a number of leading zeros.</inlineHelpText>
    <label>Difficulty</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>