force-app/main/default/objects/Blockchain__c/fields/Miner__c.field-meta.xml
<CustomField>
    <fullName>Miner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Miner</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Blockchains (Miner)</relationshipLabel>
    <relationshipName>Blockchains_Miner</relationshipName>
    <type>Lookup</type>
</CustomField>