force-app/main/default/objects/Blockchain__c/fields/Number_of_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blocks__c</fullName>
    <label>Number of Blocks</label>
    <summaryForeignKey>Block__c.Blockchain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>