force-app/main/default/objects/Blockchain__c/fields/Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants__c</fullName>
    <label>Number of Participants</label>
    <summaryForeignKey>Participant__c.Blockchain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>