force-app/main/default/objects/Blockchain__c/fields/Number_of_Pending_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pending_Transactions__c</fullName>
    <label>Number of Pending Transactions</label>
    <summaryFilterItems>
        <field>Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Blockchain__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>