force-app/main/default/objects/Blockchain__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The reward (e.g. number of crypto coins) a miner receives after generating a new block. This is the incentive for miners to provide computing time for mining a hash to generate a new block.</inlineHelpText>
    <label>Reward</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>