force-app/main/default/objects/Blockchain__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Difficulty__c</columns>
    <columns>Reward__c</columns>
    <columns>Number_of_Participants__c</columns>
    <columns>Number_of_Blocks__c</columns>
    <columns>Number_of_Committed_Transactions__c</columns>
    <columns>Number_of_Pending_Transactions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>